--- a/chapterx09.adoc
+++ b/chapterx09.adoc
@@ -1,4 +1,4 @@
-== Chapter x9 (in which bisky steals a ship)
+== Chapter x9 (in which bisky steals a tugboat)
 
 In retrospect, Bisky was the _perfect_ animal to pull it off. She was
 knowledgeable about the specific vessel in question. Her fur was already
@@ -19,11 +19,12 @@ incomprehensible sea, and hopped out of bed.
 Bisky was cold. Autumn in the Cargo District in the middle of the night was
 always pretty chilly. But Bisky felt frozen. She took this opportunity to
 quickly put on her new work clothes, the blackest outfit she could manage.
-Black slacks, black hoodie, temporary black die for the white of her tail,
-and black galoshes. She looked in the mirror, turned around, and fluffed her
-tail, even though the occasion didn't seem to warrant a fluffy tail at all.
-But if she was going to pursue a life of crime, then might as well look good
-while doing it. Bisky's transformation into Emerald was complete.
+Black slacks, black t-shirt, black peacoat, temporary black die for the
+white of her tail, and black galoshes. She looked in the mirror, turned
+around, and fluffed her tail, even though the occasion didn't seem to
+warrant a fluffy tail at all.  But if she was going to pursue a life of
+crime, then might as well look good while doing it. Bisky's transformation
+into Emerald was complete.
 
 Emerald sought Gardenia's turquoise knitted bag out of habit, but
 immediately recognized that might not be such a wise choice. She dug around
@@ -176,7 +177,7 @@ pier.
 "`Yip! Yip!!`" KnifePup yipped. But it was a different kind of yip than
 before.
 
-Indeed, the sturdy, powerful tugboat was in the middle of ripping large
+It was true, the sturdy, powerful tugboat was in the middle of ripping large
 sections of the pier clean off. They had detached the edge of the pier and
 the leftover planks of wood collapsed into the water, making a formidable
 splash.
