--- a/chapterx12.adoc
+++ b/chapterx12.adoc
@@ -131,8 +131,57 @@ Timo.
 
 "`Here you go.`"
 
-"`Wow, thank you,`" Timo said truthfully. He looked at the pathetic excuse
-for a foam art which gated his entrance to the sweet pumpkin spice. He
-admired how imperfect it was, how it looked more like a potato than a heart.
-He closed his eyes and took a slow, methodical sip. "`This is really good,`"
-he remarked.
+"`Wow, thank you,`" Timo said truthfully. He looked at the pitiful excuse
+for foam art which gated his entrance to the sweet pumpkin spice. He admired
+how imperfect it was, how it looked more like a pancreas than a heart.  He
+closed his eyes and took a slow, methodical sip. "`This is really good,`" he
+remarked.  Bisky was pleased.
+
+"`Do you have a minute?`" Bisky asked.
+
+"`Sure, sure!`" Timo thought she'd never ask.
+
+Bisky took the seat next to him. It was the annoying small chair that Bisky
+hated sitting in, since her tail was nearly as big as it, but that hardly
+mattered in this instance.
+
+"`I'm actually really glad to see you,`" she said with reverence.
+
+"`Same!`" Timo yelled cheerfully. Sometimes, Bisky wondered if he was
+partially deaf."`Hey, I wanted to ask you last week, but you were away:
+there's a bunch of new exhibits at the MoMA, do you wanna come along?`"
+
+Bisky did _not_ see that one coming, like a magic trick.
+
+"`Wow, uh, the museum?`" she asked. She asked partially because she didn't
+know what else to say, and partially because she actually wasn't certain
+whether the "`MoMA`" was actually the Port Sokuit Museum of Modern Art.
+
+"`Yeah, yeah!`" Timo confirmed, swallowing another gulp of pumpkin spice.
+"`It'll be fun. What do you think?`"
+
+Bisky was clueless about art, but it would be definitely be _quite
+interesting indeed_ to interact with Timo outside of work.
+
+She had great difficultly reining in her excitement. "`Sure, let's do it,`"
+she said as coolly as possible, that is, as cool as a muffin pan just out of
+the oven. "`I'm not doing anything Saturday...`"
+
+"`Saturday it is, then,`" Timo finalized. Bisky still didn't quite believe
+what had just happened. She proceeded to engage in a daydream of spending
+_all day_ with Timo the fox... but it would only be a fleeting one, and
+scurried back into its hole when the door jingled.
+
+She indicated the new customers to Timo, and he nodded in understanding as
+he took another sip from his mug.  Bisky got up, dusted off her apron,
+skipped quickly over to her station, and then it was business as usual.
+
+Before too long, Timo had to go. He refused to interrupt Bisky and her work
+any further, but she was in the middle of taking care of an order. So, on
+his way out, he gave Joyce a napkin decorated with some numbers from a pen,
+and asked her to pass it on to Bisky.
+
+Despite now having his number, an unfamiliar mixture of melancholy and hope
+subsumed Bisky when she noticed the fox leaving. She wanted to tell him all
+about it. He would listen. She sighed wistfully as she prepared another cup
+of coffee for someone who was not Timo.
