--- a/chapterx13.adoc
+++ b/chapterx13.adoc
@@ -1,3 +1,6 @@
 == Chapter x13 (in which bisky goes to gardenia's concert)
 
-
+This battleground had become very familiar to Bisky. She stared at the
+clothes in her closet. The clothes stared back at her. She could hear the
+theme song to a western movie playing in hear head, and the skunk and the
+dresses stood off.
